--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
+.demo_map {
+	width: 780px;
+}
+
 body {
 	margin: 0px;
 	font-family: arial;
@@ -266,7 +270,7 @@ form {
 					float: right;
 					border: 1px solid gray;
 					box-shadow: 2px 2px 2px silver;
-					width: 80px;
+					width: 85px;
 					padding: 10px;
 					text-align: center;
 					margin-right: 10px;
