--- a/app/views/garages/index.html.erb
+++ b/app/views/garages/index.html.erb
@@ -6,7 +6,8 @@
 	<div class="wrapper">
 		<div class="dashboard main">
 			<h1 class="title">Find a Garage Sale</h1>
-			<form class="form_new" action="index.php">
+			<form class="form_new" action="/garages/search">
+				<input type="hidden" name="action" value="search" />
 				<input type="text" name="zipcode" placeholder="Zipcode" class="input-box" />
 				<input type="text" name="date" placeholder="Date" class="input-box" />
 				<select class="select" name="type">
@@ -35,8 +36,9 @@
 	<div class="wrapper">
 		<h2 class="title">Garage Sales closer to you</h2>
 		<div class="dashboard">
-			<div id="map-canvas"></div>
-			<iframe width="780" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=94086&amp;aq=&amp;sll=23.625269,-102.540613&amp;sspn=26.413146,46.274414&amp;ie=UTF8&amp;hq=&amp;hnear=Sunnyvale,+California+94086,+United+States&amp;t=m&amp;z=14&amp;ll=37.371859,-122.021234&amp;output=embed"></iframe>
+			<!-- <div id="map-canvas"></div>
+			<iframe width="780" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=94086&amp;aq=&amp;sll=23.625269,-102.540613&amp;sspn=26.413146,46.274414&amp;ie=UTF8&amp;hq=&amp;hnear=Sunnyvale,+California+94086,+United+States&amp;t=m&amp;z=14&amp;ll=37.371859,-122.021234&amp;output=embed"></iframe> -->
+			<%= image_tag 'demo_map.png', :class => "demo_map" %>
 		</div>
 	</div>
 </div>
